--- a/index.html
+++ b/index.html
@@ -41,8 +41,9 @@
         <h1 class="mb-0">Hola, soy Pavka Mendoza </h1>
         <div class="mb-5">
         <p class="lead mb-3">Estudiante de Ingeniería Biomédica &amp; Emprendedor</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consectetur, magnam aut animi, excepturi voluptatum placeat dolor accusantium atque iure! Animi architecto eveniet voluptatum illo ut maiores sed, autem pariatur culpa?</p>
-        <p>Commodi, neque debitis atque cum quod, culpa repellendus voluptatum voluptatem, molestiae dicta laborum nulla corporis illum, ratione rerum quibusdam ea optio! Consectetur obcaecati facilis esse reprehenderit ipsam, facere dolorem incidunt.</p>
+        <p>Actualmente estoy cursando el cuarto semestre en la carrera de Ingeniería Biomédica, impartida por la PUCP y la UPCH, y ,dentro de esta, estoy ubicado dentro de los 10 primeros alumnos de la carrera. He asistido a cursos de Bioética,Medicina nuclear y temas afines. También, tengo un certificado en "emprendimiento" de la UOC de España.</p>
+        <p>Soy un aficionado de la lectura, principalmente historia y literatura, y del debate.
+			Me considero como alguien creativo y proactivo; puedo encontrar soluciones donde otros no, debido a mis conocimientos de otros temas, no afines, a mi carrera.</p>
         </div>
 
         <p>
